--- a/career.html
+++ b/career.html
@@ -12,7 +12,7 @@
   <header class="flex justify-center items-center" style="background-image: url('./assets/img/planting-tree-garden-concept-save-world-green-earth\ 1\ \(1\).png'); height:320px;">
     <h1 class="font-400 lg:text-5xl md:text-3xl text-2xl text-center text-white">Careers</h1>
   </header>
-    <div class="flex flex-wrap overflow-hidden">
+    <div class="flex flex-wrap overflow-hidden" style="background-image: url('./assets/img/bg-batik.png'); background-size: cover; background-position: center center;">
       <div class="w-full lg:w-1/2 flex items-center justify-center">
         <img src="./assets/img/close-up-soil-sprout 1 2.png" alt="close-up-soil-sprout 1 2.png">
       </div>
