--- a/csr.html
+++ b/csr.html
@@ -12,39 +12,41 @@
   <header class="flex justify-center items-center" style="background-image: url('./assets/img/planting-tree-garden-concept-save-world-green-earth\ 1.png'); height:320px;">
     <h1 class="font-400 lg:text-5xl md:text-3xl text-2xl text-center text-white">CSR</h1>
   </header>
-  <div class="container px-4 mx-auto">
-    <main class="py-40">
-      <h2 class="lg:text-5xl md:text-3xl text-2xl font-500 mb-8">Our CSR strategy</h2>
-      <p>
-        The CSR program is carried out by our operating companies in the community that we serve. We believe our success has been made possible by the support of the community, and by giving back to and empowering the surrounding communities, we help creating a positive cycle of growth. MUTU's CSR program addresses the following aspects: health, education, community development and environment. These four aspects mutually support and strengthen one another for sustainable long term gains. In order to realize gains in these four areas, MUTU focuses on three areas: Community Relations and Development, Infrastructure Development, and Nurturing the Environment. 
-      </p>
-    </main>
-    
-    <div class="flex flex-wrap">
-      <div class="w-full md:w-1/3">
-        <div>
-          <h2 class="lg:text-5xl md:text-3xl text-2xl font-400 mb-8">Health</h2>
-          <h3 class="lg:text-4xl md:text-2xl text-xl font-400 mb-8 text-gray-300 hover:text-gray-500">Education</h3>
-          <h3 class="lg:text-4xl md:text-2xl text-xl font-400 mb-8 text-gray-300 hover:text-gray-500">Community Development</h3>
-          <h3 class="lg:text-4xl md:text-2xl text-xl font-400 mb-8 text-gray-300 hover:text-gray-500">Environment</h3>
-        </div>
-
-      </div>
-      <div class="w-full md:w-1/3">
-        <img src="./assets/img/close-up-soil-sprout 1.png" alt="close-up-soil-sprout 1.png">
-      </div>
-      <div class="w-full md:w-1/3">
-        <p class="mb-6">
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
-        </p>
-
+  <div class="pb-60" style="background-image: url('./assets/img/bg-batik.png'); background-size: cover; background-position: center center;">
+    <div class="container px-4 mx-auto overflow-hidden">
+      <main class="py-40">
+        <h2 class="lg:text-5xl md:text-3xl text-2xl font-500 mb-8">Our CSR strategy</h2>
         <p>
-          Remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          The CSR program is carried out by our operating companies in the community that we serve. We believe our success has been made possible by the support of the community, and by giving back to and empowering the surrounding communities, we help creating a positive cycle of growth. MUTU's CSR program addresses the following aspects: health, education, community development and environment. These four aspects mutually support and strengthen one another for sustainable long term gains. In order to realize gains in these four areas, MUTU focuses on three areas: Community Relations and Development, Infrastructure Development, and Nurturing the Environment. 
         </p>
+      </main>
+      
+      <div class="flex flex-wrap">
+        <div class="w-full md:w-1/3">
+          <div>
+            <h2 class="lg:text-5xl md:text-3xl text-2xl font-400 mb-8">Health</h2>
+            <h3 class="lg:text-4xl md:text-2xl text-xl font-400 mb-8 text-gray-300 hover:text-gray-500">Education</h3>
+            <h3 class="lg:text-4xl md:text-2xl text-xl font-400 mb-8 text-gray-300 hover:text-gray-500">Community Development</h3>
+            <h3 class="lg:text-4xl md:text-2xl text-xl font-400 mb-8 text-gray-300 hover:text-gray-500">Environment</h3>
+          </div>
+  
+        </div>
+        <div class="w-full md:w-1/3">
+          <img src="./assets/img/close-up-soil-sprout 1.png" alt="close-up-soil-sprout 1.png">
+        </div>
+        <div class="w-full md:w-1/3">
+          <p class="mb-6">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+          </p>
+  
+          <p>
+            Remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+        </div>
       </div>
     </div>
   </div>
-  <footer class="bg-gray-500 text-white mt-60">
+  <footer class="bg-gray-500 text-white">
     <div class="container px-4 mx-auto">
       <div class="border-b py-12 flex flex-wrap">
         <div class="w-full md:w-1/5">
