--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
   <header class="flex justify-center items-center" style="background-image: url('./assets/img/morning-panorama-with-mountain-views-morning-sky-rice-fields\ 1.png'); height:320px;">
     <h1 class="font-400 lg:text-5xl md:text-3xl text-2xl text-center text-white">Our Products</h1>
   </header>
-    <div class="flex flex-wrap">
+    <div class="flex flex-wrap overflow-hidden" style="background-image: url('./assets/img/bg-batik.png'); background-size: cover; background-position: center center;">
       <div class="w-full md:w-1/2 flex items-center justify-center" style="background-color: #152934;">
         <div class="lg:p-20 md:p-16 p-12 text-white">
           <h2 class="lg:text-5xl md:text-3xl text-2xl font-400 mb-8">Product Specification</h2>
@@ -30,7 +30,7 @@
       <div class="w-full md:w-1/2 flex items-center justify-center" style="height: 750px">
         <img src="./assets/img/coal.png" alt="coal.png">
       </div>
-      <div class="w-full md:w-1/2" style="height: 750px; background-image: url('./assets/img/group-kids-friend-laughing-together\ 2.png');">
+      <div class="w-full md:w-1/2" style="height: 750px; background-image: url('./assets/img/group-kids-friend-laughing-together\ 2.png'); background-size: cover;">
       </div>
       <div class="w-full md:w-1/2 flex items-center justify-center" style="background-color: #152934;">
         <div class="lg:p-20 md:p-16 p-12 text-white">
